--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.4",
+    "morgan": "^1.9.1",
     "socket.io": "^2.2.0"
   },
   "scripts": {
