--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "0Calories <cppanand@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
     "socket.io": "^2.2.0"
