--- a/client/strength-bros/package.json
+++ b/client/strength-bros/package.json
@@ -8,7 +8,8 @@
     "popper.js": "^1.14.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "socket.io": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
