--- a/client/strength-bros/package.json
+++ b/client/strength-bros/package.json
@@ -10,6 +10,7 @@
     "randomcolor": "^0.5.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "socket.io": "^2.2.0"
   },
